# esp32-arduino

./: CMakeLists.txt  compatibility.lock.yml  partitions.csv  sdkconfig  sdkconfig.defaults
docs/: datasets_and_models.md
main/: CMakeLists.txt  app_main.c  idf_component.yml
main/include/app/: app_events.h  app_tasks.h  training_controller.h
main/include/audio/: audio_manager.h  audio_prompts.h
main/include/diagnostics/: diag_console.h
main/include/storage/: storage.h
main/include/ui/: lv_font_ascii_24.h  lv_font_chinese_24.h  ui_app.h  ui_components.h  ui_font.h  ui_nav.h  ui_screens.h  ui_theme.h
main/src/app/: app_controller.c  app_tasks.c  training_controller.c
main/src/audio/: audio_manager.c  audio_prompts.c
main/src/diagnostics/: console.c
main/src/storage/: storage_task.c
main/src/ui/: lv_font_ascii_24.c  lv_font_chinese_24.c  ui_app.c  ui_components.c  ui_font.c  ui_nav.c  ui_screens.c
tools/: build.ps1  chars_5000.txt  chars_final.txt  chars_orig.txt  flash.ps1  gen_chars.js  gen_font.js  gen_font_ascii.js  generate_font.py  monitor.ps1  prepare_speech_dataset.py
